# osmp

./: .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
.husky/: pre-commit
src/: App.tsx  constants.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  background_scan.rs  commands.rs  database.rs  equalizer.rs  error.rs  lib.rs  main.rs  media_controls.rs  media_controls_macos.rs  media_controls_mpris.rs  media_controls_windows.rs  metadata.rs  models.rs  playlist_io.rs  scanner.rs
src-tauri/tests/: integration_test.rs
src/components/: AddToPlaylistMenu.tsx  Albums.tsx  ColumnResizeHandle.tsx  CreatePlaylistDialog.tsx  Dashboard.tsx  EditMetadataModal.tsx  EqualizerPanel.tsx  ErrorBoundary.tsx  Library.tsx  Player.tsx  PlaylistDetail.tsx  PlaylistsSidebar.tsx  QueuePanel.tsx  Search.tsx  Settings.tsx  UpdateBanner.tsx  Visualizer.tsx
src/components/TrackTable/: TrackTableRow.tsx  index.tsx  types.ts
src/components/__tests__/: Albums.test.tsx  CreatePlaylistDialog.test.tsx  Dashboard.test.tsx  EditMetadataModal.test.tsx  EqualizerPanel.test.tsx  ErrorBoundary.test.tsx  LibraryContextMenu.test.tsx  LoadingSkeleton.test.tsx  Player.test.tsx  PlaylistsSidebar.test.tsx  QueuePanel.test.tsx  Search.test.tsx  Settings.test.tsx  UpdateBanner.test.tsx  Visualizer.test.tsx
src/hooks/: useAutoUpdate.ts  useColumnResize.ts  useContextMenu.ts  useKeyboardShortcuts.ts
src/hooks/__tests__/: useAutoUpdate.test.ts  useContextMenu.test.ts  useDebounce.test.ts  useKeyboardShortcuts.test.ts
src/store/: columnSlice.ts  equalizerSlice.ts  index.ts  librarySlice.ts  playerSlice.ts  playlistSlice.ts  queueSlice.ts  selectors.ts  types.ts  useStore.ts
src/store/__tests__/: columnSlice.test.ts  equalizerSlice.test.ts  (+6 more)
src/test/: fixtures.ts  setup.ts
src/types/: columns.ts
src/utils/: columns.ts  commands.ts  coverCache.ts  errorHandler.ts  formatting.ts
(+2 files in other folders)
