[package]
name = "osmp"
version = "0.1.0"
description = "Open Source Music Player"
authors = ["Dropicx"]
edition = "2021"

[lib]
name = "osmp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.30", features = ["bundled"] }
walkdir = "2"
lofty = "0.19"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rodio = "0.17"
anyhow = "1"
thiserror = "1"
urlencoding = "2"

