[package]
name = "osmp"
version = "0.2.0"
description = "Open Source Music Player"
license = "MIT"
authors = ["Dropicx"]
edition = "2021"

[lib]
name = "osmp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.30", features = ["bundled"] }
walkdir = "2"
lofty = "0.19"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
rodio = "0.21"
anyhow = "1"
thiserror = "1"
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
dirs = "5"
regex = "1"

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-media-player = "0.3"
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Media",
    "Foundation",
] }

[dev-dependencies]
tempfile = "3"

